--- a/index.html
+++ b/index.html
@@ -157,11 +157,11 @@ mixpanel.init("b05bc1152350834ce26780daaa463821");</script><!-- end Mixpanel -->
                             </div>
                         </div>
                         <img src="img/portfolio/lessons.jpg" class="img-responsive" alt="">
-                    </a>
+
                     <div class="portfolio-caption">
                         <h4>Lessons</h4>
                         <p class="text-muted">Give the Gift of Music</p>
-                    </div>
+                    </div></a>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
                     <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
