--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@ mixpanel.init("b05bc1152350834ce26780daaa463821");</script><!-- end Mixpanel -->
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <span class="copyright">Copyright &copy; Elizabeth Joy Music 2016-2017</span>
+                    <span class="copyright">Copyright &copy; Elizabeth Joy Music 2016 - 2017</span>
                 </div>
                 <div class="col-md-4">
                     <ul class="list-inline social-buttons">
