--- a/index.html
+++ b/index.html
@@ -153,16 +153,18 @@ mixpanel.init("b05bc1152350834ce26780daaa463821");</script><!-- end Mixpanel -->
                     <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
-                                <i class="fa fa-plus fa-3x"></i>
+                                <i class="fa fa-elipsis-h fa-3x"></i>
                             </div>
                         </div>
                         <img src="img/portfolio/lessons.jpg" class="img-responsive" alt="">
+                    </a>
+                    <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-caption">
                             <h4>Lessons</h4>
                             <p class="text-muted">Give the Gift of Music</p>
                         </div>
-                    </a>
-                </div>
+		    </a>
+		</div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
                     <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
