--- a/index.html
+++ b/index.html
@@ -169,29 +169,33 @@ mixpanel.init("b05bc1152350834ce26780daaa463821");</script><!-- end Mixpanel -->
                     <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
-                                <i class="fa fa-plus fa-3x"></i>
+                                <i class="fa fa-ellipsis-h fa-3x"></i>
                             </div>
                         </div>
                         <img src="img/portfolio/weddings.jpg" class="img-responsive" alt="">
                     </a>
-                    <div class="portfolio-caption">
-                        <h4>Weddings</h4>
-                        <p class="text-muted">Make it Unforgettable</p>
-                    </div>
+                    <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
+                        <div class="portfolio-caption">
+                            <h4>Weddings</h4>
+                            <p class="text-muted">Make it Unforgettable</p>
+                        </div>
+                    </a>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
                     <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
-                                <i class="fa fa-plus fa-3x"></i>
+                                <i class="fa fa-ellipsis fa-3x"></i>
                             </div>
                         </div>
                         <img src="img/portfolio/events.jpg" class="img-responsive" alt="">
                     </a>
-                    <div class="portfolio-caption">
-                        <h4>Events</h4>
-                        <p class="text-muted">Add a Classy Touch</p>
-                    </div>
+                    <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
+                        <div class="portfolio-caption">
+                            <h4>Events</h4>
+                            <p class="text-muted">Add a Classy Touch</p>
+                        </div>
+                    </a>
                 </div>
             </div>
         </div>
