--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@ mixpanel.init("b05bc1152350834ce26780daaa463821");</script><!-- end Mixpanel -->
                     <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
-                                <i class="fa fa-ellipsis fa-3x"></i>
+                                <i class="fa fa-ellipsis-h fa-3x"></i>
                             </div>
                         </div>
                         <img src="img/portfolio/events.jpg" class="img-responsive" alt="">
