--- a/index.html
+++ b/index.html
@@ -291,13 +291,96 @@ mixpanel.init("b05bc1152350834ce26780daaa463821");</script><!-- end Mixpanel -->
                                 <h2>Lessons</h2>
                                 <p class="item-intro text-muted">"I would teach children music, physics, and philosophy; but most importantly music, for the patterns in music and all the arts are the keys to learning." - Plato</p>
                                 <img class="img-responsive img-centered" src="img/portfolio/lessons-large.jpg" alt="">
-                                <p>I offer private instruction for harp, piano, and voice in the East Seattle area. All ages and experience levels are welcome. I teach in-home, meaning that I travel to you for lessons for your convenience. Please email for rates and availability.</p>
                                 <p>
+					I offer private instruction for harp, piano, and voice in the East Seattle area. 
+					I teach in the following areas - Bothell, Kirkland, Redmond, Bellevue, Woodinville, Duvall and Kenmore.
+					All ages and experience levels are welcome. 
+					I teach in-home, meaning that I travel to you for lessons for your convenience. 
+					Please email for rates and availability.
+				</p>
+				<p>
+                                    <a href="#contact">Contact Me</a>
+				</p>
+                                <p>
+                                   <strong>Teaching Philosophy</strong>
+                                <p>
+                                <p>
+					My aim is to help every student experience success by customizing lessons to each student’s unique learning style and area of interest. 
+					Lessons are fun and upbeat, and I use a variety of exciting teaching tools such as lesson and theory books, games, and flashcards. 
+					I teach fundamental musical concepts while helping students learn to play the songs that they love. 
+					Learn more about specific areas of study below.				
+				</p>
+                                <p>
+                                   <strong>Harp</strong>
+                                <p>
+                                <p>
+					Master harp technique and learn to play the songs you love. 
+					I will help you develop proper playing technique, read music notation, study music theory, prepare you to perform, and even help you compose your own songs. 
+					I also provide help finding a harp for you to rent or purchase.				
+				</p>
+                                <p>
+                                   <strong>Piano</strong>
+                                <p>
+                                <p>
+					Whether you want to play pop, rock, classical, r&b, Disney, Broadway, hymns, holiday tunes, or any other genre of your choosing, I will help you learn to both read and play piano music. 
+					All students learn the basics of music notation, hand positions, fingering, and pedal skills. 
+					I will even help you compose your own songs if you have interest.				
+				</p>
+                                <p>
+                                   <strong>Voice</strong>
+                                <p>
+                                <p>
+					Each person has certain intuitive vocal abilities. 
+					My approach in voice lessons is to discover these abilities and fill in the gaps of each student’s vocal understandings. 
+					I specialize in teaching musical theater and contemporary vocal styles. 
+					Students learn proper singing posture, how to control and optimize breathing, how to warm up the voice correctly, basic music notation reading, stylistic interpretation, and performance techniques.
+				</p>
+                                <p>
+                                   <strong>What does my tuition cover?</strong>
+                                <p>
+				<ul>
+					<li>Time spent teaching the student during lessons</li>
+					<li>Time spent preparing for lessons and customizing the lesson plan to the student’s level of proficiency and interests. Tuition covers the time I spend searching for appropriate music to both motivate and stimulate learning.</li>
+					<li>My commute to your home for lessons</li>
+					<li>Recital costs and preparations (programs, facility rental, time spent planning)</li>
+					<li>Operational expenses such as printing sheet music and other educational materials, making copies, preparing and stocking content for music lesson binders, etc.</li>
+				</ul>
+                                <p>
+					For every hour enrolled in music lessons, you are investing in at least 2 hours of your teacher’s time.
+				</p>
+                                <p>
+                                   <strong>Policy</strong>
+                                <p>
+                                <p>
+                                	In order to make lessons productive, I have established some simple policies. Highlights include:
+                                <p>
+				<ul>
+					<li>
+						<strong>A Predictable Calendar:</strong>
+                                		My agreement guarantees that I will be present and prepared to teach 41 week in a year. 
+						Please make note of the weeks I am not scheduled to teach so that you can plan accordingly.
+						You can see my 2017 calendar <a href="/resources/2017-ElizabethJoyMusicCalendar.pdf">here</a>.
+					</li>
+					<li>
+						<strong>Simple Monthly Tuition:</strong>
+                                		It is easy to budget for lessons as I charge a consistent monthly tuition rate - 
+						one check once a month for the same amount regardless of the number of weeks in a month.						
+					</li>
+					<li>
+						<strong>Missed Lesson Alternatives:</strong>
+                                		I offer some reasonable alternative if you must miss a lesson. 
+						A "no make-ups" policy allows me to give every student the the energy and instruction they deserve. 
+					</li>
+				</ul>
+                                <p>
+                                	You can read my 2017 policy <a href="/resources/2017-ElizabethJoyMusicPolicy.pdf">here</a>.
+                                <p>
+				<p>
                                    <strong>Reviews</strong>
                                 <p>
-                                   "Elizabeth is an incredible teacher. Both of my girls take lessons from her, one in harp and the other in voice. She is a fun and patient teacher, catering to each student's learning style and ability. We highly recommend Elizabeth." <i>-Tiffany M.</i>
+                                	"Elizabeth is an incredible teacher. Both of my girls take lessons from her, one in harp and the other in voice. She is a fun and patient teacher, catering to each student's learning style and ability. We highly recommend Elizabeth." <i>-Tiffany M.</i>
                                 <p>
-                                   "Elizabeth is a fabulous teacher! She has such great rapport with my daughter who just turned 6. We are so happy with how quickly she has progressed and are grateful to Elizabeth for instilling such a great passion for music in our daughter." <i>-Shirley A.</i>
+                                	"Elizabeth is a fabulous teacher! She has such great rapport with my daughter who just turned 6. We are so happy with how quickly she has progressed and are grateful to Elizabeth for instilling such a great passion for music in our daughter." <i>-Shirley A.</i>
                                 <p>
                                 	"Elizabeth has inspired my daughter to want to practice and learn the piano. She knows how to inspire kids to love music and teaches good technique and theory in the process!" <i>-Sandi P.</i>
                                 <p>
