--- a/index.html
+++ b/index.html
@@ -291,15 +291,12 @@ mixpanel.init("b05bc1152350834ce26780daaa463821");</script><!-- end Mixpanel -->
                                 <h2>Lessons</h2>
                                 <p class="item-intro text-muted">"I would teach children music, physics, and philosophy; but most importantly music, for the patterns in music and all the arts are the keys to learning." - Plato</p>
                                 <img class="img-responsive img-centered" src="img/portfolio/lessons-large.jpg" alt="">
-                                <p>
+                                <p style="text:align: justify;">
 					I offer private instruction for harp, piano, and voice in the East Seattle area. 
 					I teach in the following areas - Bothell, Kirkland, Redmond, Bellevue, Woodinville, Duvall and Kenmore.
 					All ages and experience levels are welcome. 
 					I teach in-home, meaning that I travel to you for lessons for your convenience. 
-					Please email for rates and availability.
-				</p>
-				<p>
-                                    <a href="#contact">Contact Me</a>
+					Please email for rates and availability <u><a href="#contact">here</a></u>.
 				</p>
                                 <p>
                                    <strong>Teaching Philosophy</strong>
