--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@ mixpanel.init("b05bc1152350834ce26780daaa463821");</script><!-- end Mixpanel -->
                                 <h2>Lessons</h2>
                                 <p class="item-intro text-muted">"I would teach children music, physics, and philosophy; but most importantly music, for the patterns in music and all the arts are the keys to learning." - Plato</p>
                                 <img class="img-responsive img-centered" src="img/portfolio/lessons-large.jpg" alt="">
-                                <p style="text:align: justify;">
+                                <p style="text-align: justify;">
 					I offer private instruction for harp, piano, and voice in the East Seattle area. 
 					I teach in the following areas - Bothell, Kirkland, Redmond, Bellevue, Woodinville, Duvall and Kenmore.
 					All ages and experience levels are welcome. 
