--- a/index.html
+++ b/index.html
@@ -298,60 +298,59 @@ mixpanel.init("b05bc1152350834ce26780daaa463821");</script><!-- end Mixpanel -->
 					I teach in-home, meaning that I travel to you for lessons for your convenience. 
 					Please email for rates and availability <u><a href="#contact">here</a></u>.
 				</p>
-                                <p>
+                                <p style="text-align: justify;">
                                    <strong>Teaching Philosophy</strong>
                                 <p>
-                                <p>
+                                <p style="text-align: justify;">
 					My aim is to help every student experience success by customizing lessons to each student’s unique learning style and area of interest. 
 					Lessons are fun and upbeat, and I use a variety of exciting teaching tools such as lesson and theory books, games, and flashcards. 
 					I teach fundamental musical concepts while helping students learn to play the songs that they love. 
-					Learn more about specific areas of study below.				
 				</p>
-                                <p>
+                                <p style="text-align: justify;">
                                    <strong>Harp</strong>
                                 <p>
-                                <p>
+                                <p style="text-align: justify;">
 					Master harp technique and learn to play the songs you love. 
 					I will help you develop proper playing technique, read music notation, study music theory, prepare you to perform, and even help you compose your own songs. 
 					I also provide help finding a harp for you to rent or purchase.				
 				</p>
-                                <p>
+                                <p style="text-align: justify;">
                                    <strong>Piano</strong>
                                 <p>
-                                <p>
+                                <p style="text-align: justify;">
 					Whether you want to play pop, rock, classical, r&b, Disney, Broadway, hymns, holiday tunes, or any other genre of your choosing, I will help you learn to both read and play piano music. 
 					All students learn the basics of music notation, hand positions, fingering, and pedal skills. 
 					I will even help you compose your own songs if you have interest.				
 				</p>
-                                <p>
+                                <p style="text-align: justify;">
                                    <strong>Voice</strong>
                                 <p>
-                                <p>
+                                <p style="text-align: justify;">
 					Each person has certain intuitive vocal abilities. 
 					My approach in voice lessons is to discover these abilities and fill in the gaps of each student’s vocal understandings. 
 					I specialize in teaching musical theater and contemporary vocal styles. 
 					Students learn proper singing posture, how to control and optimize breathing, how to warm up the voice correctly, basic music notation reading, stylistic interpretation, and performance techniques.
 				</p>
-                                <p>
+                                <p style="text-align: justify;">
                                    <strong>What does my tuition cover?</strong>
                                 <p>
-				<ul>
+				<ul style="text-align: justify;">
 					<li>Time spent teaching the student during lessons</li>
 					<li>Time spent preparing for lessons and customizing the lesson plan to the student’s level of proficiency and interests. Tuition covers the time I spend searching for appropriate music to both motivate and stimulate learning.</li>
 					<li>My commute to your home for lessons</li>
 					<li>Recital costs and preparations (programs, facility rental, time spent planning)</li>
 					<li>Operational expenses such as printing sheet music and other educational materials, making copies, preparing and stocking content for music lesson binders, etc.</li>
 				</ul>
-                                <p>
+                                <p style="text-align: justify;">
 					For every hour enrolled in music lessons, you are investing in at least 2 hours of your teacher’s time.
 				</p>
-                                <p>
+                                <p style="text-align: justify;">
                                    <strong>Policy</strong>
                                 <p>
-                                <p>
+                                <p style="text-align: justify;">
                                 	In order to make lessons productive, I have established some simple policies. Highlights include:
                                 <p>
-				<ul>
+				<ul style="text-align: justify;">
 					<li>
 						<strong>A Predictable Calendar:</strong>
                                 		My agreement guarantees that I will be present and prepared to teach 41 week in a year. 
@@ -369,19 +368,21 @@ mixpanel.init("b05bc1152350834ce26780daaa463821");</script><!-- end Mixpanel -->
 						A "no make-ups" policy allows me to give every student the the energy and instruction they deserve. 
 					</li>
 				</ul>
-                                <p>
+                                <p style="text-align: justify;">
                                 	You can read my 2017 policy <a href="/resources/2017-ElizabethJoyMusicPolicy.pdf">here</a>.
-                                <p>
-				<p>
+                                </p>
+				<p style="text-align: justify;">
                                    <strong>Reviews</strong>
-                                <p>
+				</p>
+                                <p style="text-align: justify;">
                                 	"Elizabeth is an incredible teacher. Both of my girls take lessons from her, one in harp and the other in voice. She is a fun and patient teacher, catering to each student's learning style and ability. We highly recommend Elizabeth." <i>-Tiffany M.</i>
-                                <p>
+				</p>
+				<p style="text-align: justify;>
                                 	"Elizabeth is a fabulous teacher! She has such great rapport with my daughter who just turned 6. We are so happy with how quickly she has progressed and are grateful to Elizabeth for instilling such a great passion for music in our daughter." <i>-Shirley A.</i>
-                                <p>
+				</p>
+                                <p style="text-align: justify;>
                                 	"Elizabeth has inspired my daughter to want to practice and learn the piano. She knows how to inspire kids to love music and teaches good technique and theory in the process!" <i>-Sandi P.</i>
-                                <p>
-                                <p>
+				</p>
                                 <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close </button>
                             </div>
                         </div>
