--- a/index.html
+++ b/index.html
@@ -377,10 +377,10 @@ mixpanel.init("b05bc1152350834ce26780daaa463821");</script><!-- end Mixpanel -->
                                 <p style="text-align: justify;">
                                 	"Elizabeth is an incredible teacher. Both of my girls take lessons from her, one in harp and the other in voice. She is a fun and patient teacher, catering to each student's learning style and ability. We highly recommend Elizabeth." <i>-Tiffany M.</i>
 				</p>
-				<p style="text-align: justify;>
+				<p style="text-align: justify;">
                                 	"Elizabeth is a fabulous teacher! She has such great rapport with my daughter who just turned 6. We are so happy with how quickly she has progressed and are grateful to Elizabeth for instilling such a great passion for music in our daughter." <i>-Shirley A.</i>
 				</p>
-                                <p style="text-align: justify;>
+                                <p style="text-align: justify;">
                                 	"Elizabeth has inspired my daughter to want to practice and learn the piano. She knows how to inspire kids to love music and teaches good technique and theory in the process!" <i>-Sandi P.</i>
 				</p>
                                 <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close </button>
