--- a/index.html
+++ b/index.html
@@ -335,11 +335,11 @@ mixpanel.init("b05bc1152350834ce26780daaa463821");</script><!-- end Mixpanel -->
                                    <strong>What does my tuition cover?</strong>
                                 <p>
 				<ul style="text-align: justify;">
-					<li>Time spent teaching the student during lessons</li>
-					<li>Time spent preparing for lessons and customizing the lesson plan to the student’s level of proficiency and interests. Tuition covers the time I spend searching for appropriate music to both motivate and stimulate learning.</li>
-					<li>My commute to your home for lessons</li>
-					<li>Recital costs and preparations (programs, facility rental, time spent planning)</li>
-					<li>Operational expenses such as printing sheet music and other educational materials, making copies, preparing and stocking content for music lesson binders, etc.</li>
+					<li style="padding-top: 8px;">Time spent teaching the student during lessons</li>
+					<li style="padding-top: 8px;">Time spent preparing for lessons and customizing the lesson plan to the student’s level of proficiency and interests. Tuition covers the time I spend searching for appropriate music to both motivate and stimulate learning.</li>
+					<li style="padding-top: 8px;">My commute to your home for lessons</li>
+					<li style="padding-top: 8px;">Recital costs and preparations (programs, facility rental, time spent planning)</li>
+					<li style="padding-top: 8px;">Operational expenses such as printing sheet music and other educational materials, making copies, preparing and stocking content for music lesson binders, etc.</li>
 				</ul>
                                 <p style="text-align: justify;">
 					For every hour enrolled in music lessons, you are investing in at least 2 hours of your teacher’s time.
@@ -351,25 +351,25 @@ mixpanel.init("b05bc1152350834ce26780daaa463821");</script><!-- end Mixpanel -->
                                 	In order to make lessons productive, I have established some simple policies. Highlights include:
                                 <p>
 				<ul style="text-align: justify;">
-					<li>
+					<li style="padding-top: 8px;">
 						<strong>A Predictable Calendar:</strong>
                                 		My agreement guarantees that I will be present and prepared to teach 41 week in a year. 
 						Please make note of the weeks I am not scheduled to teach so that you can plan accordingly.
-						You can see my 2017 calendar <a href="/resources/2017-ElizabethJoyMusicCalendar.pdf">here</a>.
+						You can see my 2017 calendar <u><a href="/resources/2017-ElizabethJoyMusicCalendar.pdf">here</a></u>.
 					</li>
-					<li>
+					<li style="padding-top: 8px;">
 						<strong>Simple Monthly Tuition:</strong>
                                 		It is easy to budget for lessons as I charge a consistent monthly tuition rate - 
 						one check once a month for the same amount regardless of the number of weeks in a month.						
 					</li>
-					<li>
+					<li style="padding-top: 8px;">
 						<strong>Missed Lesson Alternatives:</strong>
                                 		I offer some reasonable alternative if you must miss a lesson. 
 						A "no make-ups" policy allows me to give every student the the energy and instruction they deserve. 
 					</li>
 				</ul>
                                 <p style="text-align: justify;">
-                                	You can read my 2017 policy <a href="/resources/2017-ElizabethJoyMusicPolicy.pdf">here</a>.
+                                	You can read my 2017 policy <u><a href="/resources/2017-ElizabethJoyMusicPolicy.pdf">here</a></u>.
                                 </p>
 				<p style="text-align: justify;">
                                    <strong>Reviews</strong>
