--- a/index.html
+++ b/index.html
@@ -336,10 +336,10 @@ mixpanel.init("b05bc1152350834ce26780daaa463821");</script><!-- end Mixpanel -->
                                 <p>
 				<ul style="text-align: justify;">
 					<li style="padding-top: 8px;">Time spent teaching the student during lessons</li>
-					<li style="padding-top: 8px;">Time spent preparing for lessons and customizing the lesson plan to the student’s level of proficiency and interests. Tuition covers the time I spend searching for appropriate music to both motivate and stimulate learning.</li>
+					<li style="padding-top: 8px;">Time spent preparing for and customizing lessons</li>
 					<li style="padding-top: 8px;">My commute to your home for lessons</li>
-					<li style="padding-top: 8px;">Recital costs and preparations (programs, facility rental, time spent planning)</li>
-					<li style="padding-top: 8px;">Operational expenses such as printing sheet music and other educational materials, making copies, preparing and stocking content for music lesson binders, etc.</li>
+					<li style="padding-top: 8px;">Recital costs and preparations</li>
+					<li style="padding-top: 8px;">Operational expenses</li>
 				</ul>
                                 <p style="text-align: justify;">
 					For every hour enrolled in music lessons, you are investing in at least 2 hours of your teacher’s time.
