--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@ mixpanel.init("b05bc1152350834ce26780daaa463821");</script><!-- end Mixpanel -->
                                    <strong>Teaching Philosophy</strong>
                                 <p>
                                 <p style="text-align: justify;">
-					My aim is to help every student experience success by customizing lessons to each student’s unique learning style and area of interest. 
+					My aim is to help every student experience success by customizing lessons to each student’s unique learning style and areas of interest. 
 					Lessons are fun and upbeat, and I use a variety of exciting teaching tools such as lesson and theory books, games, and flashcards. 
 					I teach fundamental musical concepts while helping students learn to play the songs that they love. 
 				</p>
@@ -332,19 +332,6 @@ mixpanel.init("b05bc1152350834ce26780daaa463821");</script><!-- end Mixpanel -->
 					Students learn proper singing posture, how to control and optimize breathing, how to warm up the voice correctly, basic music notation reading, stylistic interpretation, and performance techniques.
 				</p>
                                 <p style="text-align: justify;">
-                                   <strong>What does my tuition cover?</strong>
-                                <p>
-				<ul style="text-align: justify;">
-					<li style="padding-top: 8px;">Time spent teaching the student during lessons</li>
-					<li style="padding-top: 8px;">Time spent preparing for and customizing lessons</li>
-					<li style="padding-top: 8px;">My commute to your home for lessons</li>
-					<li style="padding-top: 8px;">Recital costs and preparations</li>
-					<li style="padding-top: 8px;">Operational expenses</li>
-				</ul>
-                                <p style="text-align: justify;">
-					For every hour enrolled in music lessons, you are investing in at least 2 hours of your teacher’s time.
-				</p>
-                                <p style="text-align: justify;">
                                    <strong>Policy</strong>
                                 <p>
                                 <p style="text-align: justify;">
@@ -353,7 +340,7 @@ mixpanel.init("b05bc1152350834ce26780daaa463821");</script><!-- end Mixpanel -->
 				<ul style="text-align: justify;">
 					<li style="padding-top: 8px;">
 						<strong>A Predictable Calendar:</strong>
-                                		My agreement guarantees that I will be present and prepared to teach 41 week in a year. 
+                                		I am present and prepared to teach 41 weeks a year. 
 						Please make note of the weeks I am not scheduled to teach so that you can plan accordingly.
 						You can see my 2017 calendar <u><a href="/resources/2017-ElizabethJoyMusicCalendar.pdf">here</a></u>.
 					</li>
@@ -364,13 +351,26 @@ mixpanel.init("b05bc1152350834ce26780daaa463821");</script><!-- end Mixpanel -->
 					</li>
 					<li style="padding-top: 8px;">
 						<strong>Missed Lesson Alternatives:</strong>
-                                		I offer some reasonable alternative if you must miss a lesson. 
-						A "no make-ups" policy allows me to give every student the the energy and instruction they deserve. 
+                                		I offer some reasonable alternatives if you must miss a lesson. 
+						A "no make-ups" policy allows me to give every student the energy and instruction they deserve. 
 					</li>
 				</ul>
                                 <p style="text-align: justify;">
                                 	You can read my 2017 policy <u><a href="/resources/2017-ElizabethJoyMusicPolicy.pdf">here</a></u>.
                                 </p>
+                                <p style="text-align: justify;">
+                                   <strong>What does my tuition cover?</strong>
+                                <p>
+				<ul style="text-align: justify;">
+					<li style="padding-top: 8px;">Time spent teaching the student during lessons</li>
+					<li style="padding-top: 8px;">Time spent preparing for and customizing lessons</li>
+					<li style="padding-top: 8px;">My commute to your home for lessons</li>
+					<li style="padding-top: 8px;">Recital costs and preparations</li>
+					<li style="padding-top: 8px;">Operational expenses</li>
+				</ul>
+                                <p style="text-align: justify;">
+					For every hour enrolled in music lessons, you are investing in at least two hours of your teacher’s time.
+				</p>
 				<p style="text-align: justify;">
                                    <strong>Reviews</strong>
 				</p>
