--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@ mixpanel.init("b05bc1152350834ce26780daaa463821");</script><!-- end Mixpanel -->
 					I teach in the following areas - Bothell, Kirkland, Redmond, Bellevue, Woodinville, Duvall and Kenmore.
 					All ages and experience levels are welcome. 
 					I teach in-home, meaning that I travel to you for lessons for your convenience. 
-					Please email for rates and availability <u><a data-dismiss="modal" href="#contact">here</a></u>.
+					Please email for rates and availability <u><a data-dismiss="modal" href="#contact" class="page-scroll">here</a></u>.
 				</p>
                                 <p style="text-align: justify;">
                                    <strong>Teaching Philosophy</strong>
