--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@ mixpanel.init("b05bc1152350834ce26780daaa463821");</script><!-- end Mixpanel -->
 					I teach in the following areas - Bothell, Kirkland, Redmond, Bellevue, Woodinville, Duvall and Kenmore.
 					All ages and experience levels are welcome. 
 					I teach in-home, meaning that I travel to you for lessons for your convenience. 
-					Please email for rates and availability <u><a data-dismiss="modal" href="#contact" class="page-scroll">here</a></u>.
+					Please <u><a data-dismiss="modal" href="#contact" class="page-scroll">email for rates and availability here</a></u>.
 				</p>
                                 <p style="text-align: justify;">
                                    <strong>Teaching Philosophy</strong>
@@ -342,7 +342,7 @@ mixpanel.init("b05bc1152350834ce26780daaa463821");</script><!-- end Mixpanel -->
 						<strong>A Predictable Calendar:</strong>
                                 		I am present and prepared to teach 41 weeks a year. 
 						Please make note of the weeks I am not scheduled to teach so that you can plan accordingly.
-						You can see my 2017 calendar <u><a href="/resources/2017-ElizabethJoyMusicCalendar.pdf">here</a></u>.
+						You can <u><a href="/resources/2017-ElizabethJoyMusicCalendar.pdf">see my 2017 calendar here</a></u>.
 					</li>
 					<li style="padding-top: 8px;">
 						<strong>Simple Monthly Tuition:</strong>
@@ -356,7 +356,7 @@ mixpanel.init("b05bc1152350834ce26780daaa463821");</script><!-- end Mixpanel -->
 					</li>
 				</ul>
                                 <p style="text-align: justify;">
-                                	You can read my 2017 policy <u><a href="/resources/2017-ElizabethJoyMusicPolicy.pdf">here</a></u>.
+                                	You can <u><a href="/resources/2017-ElizabethJoyMusicPolicy.pdf">read my 2017 policy here</a></u>.
                                 </p>
                                 <p style="text-align: justify;">
                                    <strong>What does my tuition cover?</strong>
