--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@ mixpanel.init("b05bc1152350834ce26780daaa463821");</script><!-- end Mixpanel -->
 						<strong>A Predictable Calendar:</strong>
                                 		I am present and prepared to teach 41 weeks a year. 
 						Please make note of the weeks I am not scheduled to teach so that you can plan accordingly.
-						You can <u><a href="/resources/2017-ElizabethJoyMusicCalendar.pdf" style="color: #003366">see my 2017 calendar here</a></u>.
+						You can <u><a href="/resources/2017-ElizabethJoyMusicCalendar.pdf" target="_blank" style="color: #003366">see my 2017 calendar here</a></u>.
 					</li>
 					<li style="padding-top: 8px;">
 						<strong>Simple Monthly Tuition:</strong>
@@ -356,7 +356,7 @@ mixpanel.init("b05bc1152350834ce26780daaa463821");</script><!-- end Mixpanel -->
 					</li>
 				</ul>
                                 <p style="text-align: justify;">
-                                	You can <u><a href="/resources/2017-ElizabethJoyMusicPolicy.pdf" style="color: #003366">read my 2017 policy here</a></u>.
+                                	You can <u><a href="/resources/2017-ElizabethJoyMusicPolicy.pdf" target="_blank" style="color: #003366">read my 2017 policy here</a></u>.
                                 </p>
                                 <p style="text-align: justify;">
                                    <strong>What does my tuition cover?</strong>
