--- a/index.html
+++ b/index.html
@@ -290,6 +290,11 @@ mixpanel.init("b05bc1152350834ce26780daaa463821");</script><!-- end Mixpanel -->
                                 <!-- Project Details Go Here -->
                                 <h2>Lessons</h2>
                                 <p class="item-intro text-muted">"I would teach children music, physics, and philosophy; but most importantly music, for the patterns in music and all the arts are the keys to learning." - Plato</p>
+				<div>
+                                	<img class="img-responsive" style="width:33%" src="img/portfolio/lessons-large.jpg" alt="">
+                                	<img class="img-responsive" style="width:33%" src="img/portfolio/lessons-large.jpg" alt="">
+                                	<img class="img-responsive" style="width:33%" src="img/portfolio/lessons-large.jpg" alt="">
+				</div>
                                 <img class="img-responsive img-centered" src="img/portfolio/lessons-large.jpg" alt="">
                                 <p style="text-align: justify;">
 					I offer private instruction for harp, piano, and voice in the East Seattle area. 
