--- a/index.html
+++ b/index.html
@@ -291,9 +291,9 @@ mixpanel.init("b05bc1152350834ce26780daaa463821");</script><!-- end Mixpanel -->
                                 <h2>Lessons</h2>
                                 <p class="item-intro text-muted">"I would teach children music, physics, and philosophy; but most importantly music, for the patterns in music and all the arts are the keys to learning." - Plato</p>
 				<div>
-                                	<img class="img-responsive" style="width:33%" src="img/portfolio/lessons-large.jpg" alt="">
-                                	<img class="img-responsive" style="width:33%" src="img/portfolio/lessons-large.jpg" alt="">
-                                	<img class="img-responsive" style="width:33%" src="img/portfolio/lessons-large.jpg" alt="">
+                                	<img class="img-responsive" style="width:33%; padding:0px; margin:0px;" src="img/portfolio/lessons-large.jpg" alt="">
+                                	<img class="img-responsive" style="width:33%; padding:0px; margin:0px;" src="img/portfolio/lessons-large.jpg" alt="">
+                                	<img class="img-responsive" style="width:33%; padding:0px; margin:0px;" src="img/portfolio/lessons-large.jpg" alt="">
 				</div>
                                 <img class="img-responsive img-centered" src="img/portfolio/lessons-large.jpg" alt="">
                                 <p style="text-align: justify;">
