--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@ mixpanel.init("b05bc1152350834ce26780daaa463821");</script><!-- end Mixpanel -->
                                 	<img class="img-responsive" style="width:33%; padding:0px; margin:-1px;" src="img/portfolio/lessons-large.jpg" alt="">
                                 	<img class="img-responsive" style="width:33%; padding:0px; margin:-1px;" src="img/portfolio/lessons-large.jpg" alt="">
 				</div>
-                                <p style="text-align: justify;">
+                                <p style="text-align: justify; margin-top: 32px;">
 					I offer private instruction for harp, piano, and voice in the East Seattle area. 
 					I teach in the following areas - Bothell, Kirkland, Redmond, Bellevue, Woodinville, Duvall and Kenmore.
 					All ages and experience levels are welcome. 
