--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@ mixpanel.init("b05bc1152350834ce26780daaa463821");</script><!-- end Mixpanel -->
                                 	<img class="img-responsive" style="width:33%; padding:0px; margin:-1px;" src="img/portfolio/lessons-square-harp.jpg" alt="">
 				</div>
                                 <p style="text-align: justify; margin-top: 32px;">
-					I offer private instruction for harp, piano, and voice in the East Seattle area. 
+					I offer private instruction for harp, piano, and voice in the East Seattle region. 
 					I teach in the following areas - Bothell, Kirkland, Redmond, Bellevue, Woodinville, Duvall and Kenmore.
 					All ages and experience levels are welcome. 
 					I teach in-home, meaning that I travel to you for lessons for your convenience. 
@@ -314,7 +314,7 @@ mixpanel.init("b05bc1152350834ce26780daaa463821");</script><!-- end Mixpanel -->
                                    <strong>Harp</strong>
                                 <p>
                                 <p style="text-align: justify;">
-					Master harp technique and learn to play the songs you love. 
+					Master harp technique and learn to play songs you enjoy. 
 					I will help you develop proper playing technique, read music notation, study music theory, prepare you to perform, and even help you compose your own songs. 
 					I also provide help finding a harp for you to rent or purchase.				
 				</p>
