--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@ mixpanel.init("b05bc1152350834ce26780daaa463821");</script><!-- end Mixpanel -->
     <header>
         <div class="container">
             <div class="intro-text">
-                <div class="intro-lead-in">Proudly Serving the Pacific Northwest</div>
-                <div class="intro-heading">Seattle Harpist</div>
+                <div class="intro-lead-in">Elizabeth Joy Music</div>
+                <div class="intro-heading">Seattle Harpist - Music Teacher</div>
                 <a href="#contact" class="page-scroll btn btn-xl">Contact Me</a>
             </div>
         </div>
