--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ mixpanel.init("b05bc1152350834ce26780daaa463821");</script><!-- end Mixpanel -->
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">Elizabeth Joy Music</a>
+                <!--<a class="navbar-brand page-scroll" href="#page-top">Elizabeth Joy Music</a>-->
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
