--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ mixpanel.init("b05bc1152350834ce26780daaa463821");</script><!-- end Mixpanel -->
             <div class="intro-text">
                 <div class="intro-lead-in">Elizabeth Joy Music</div>
                 <div class="intro-heading">Seattle Harpist - Music Teacher</div>
-                <a href="#contact" class="page-scroll btn btn-xl">Contact Me</a>
+                <!--<a href="#contact" class="page-scroll btn btn-xl">Contact Me</a>-->
             </div>
         </div>
     </header>
