--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ mixpanel.init("b05bc1152350834ce26780daaa463821");</script><!-- end Mixpanel -->
         <div class="container">
             <div class="intro-text">
                 <div class="intro-lead-in">Elizabeth Joy Music</div>
-                <div class="intro-heading">Seattle Harpist - Music Teacher</div>
+                <div class="intro-heading">Seattle Harpist &amp; Music Teacher</div>
                 <!--<a href="#contact" class="page-scroll btn btn-xl">Contact Me</a>-->
             </div>
         </div>
