--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@ mixpanel.init("b05bc1152350834ce26780daaa463821");</script><!-- end Mixpanel -->
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Contact Me</h2>
-                    <h3 class="section-subheading">Lessons or Events? Let's get in touch.</h3>
+                    <!--<h3 class="section-subheading">Lessons or Events? Let's get in touch.</h3>-->
                 </div>
             </div>
             <div class="row">
