--- a/index.html
+++ b/index.html
@@ -160,22 +160,6 @@ mixpanel.init("b05bc1152350834ce26780daaa463821");</script><!-- end Mixpanel -->
             </div>
             <div class="row">
                 <div class="col-md-4 col-sm-6 portfolio-item">
-                    <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
-                        <div class="portfolio-hover">
-                            <div class="portfolio-hover-content">
-                                <i class="fa fa-ellipsis-h fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="img/portfolio/lessons.jpg" class="img-responsive" alt="">
-                    </a>
-                    <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
-                        <div class="portfolio-caption">
-                            <h4>Lessons</h4>
-                            <p class="text-muted">Give the Gift of Music</p>
-                        </div>
-		    </a>
-		</div>
-                <div class="col-md-4 col-sm-6 portfolio-item">
                     <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
@@ -187,10 +171,26 @@ mixpanel.init("b05bc1152350834ce26780daaa463821");</script><!-- end Mixpanel -->
                     <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-caption">
                             <h4>Weddings</h4>
-                            <p class="text-muted">Make it Unforgettable</p>
+                            <!--<p class="text-muted">Make it Unforgettable</p>-->
                         </div>
                     </a>
                 </div>
+                <div class="col-md-4 col-sm-6 portfolio-item">
+                    <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
+                        <div class="portfolio-hover">
+                            <div class="portfolio-hover-content">
+                                <i class="fa fa-ellipsis-h fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="img/portfolio/lessons.jpg" class="img-responsive" alt="">
+                    </a>
+                    <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
+                        <div class="portfolio-caption">
+                            <h4>Lessons</h4>
+                            <!--<p class="text-muted">Give the Gift of Music</p>-->
+                        </div>
+		    </a>
+		</div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
                     <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
@@ -203,7 +203,7 @@ mixpanel.init("b05bc1152350834ce26780daaa463821");</script><!-- end Mixpanel -->
                     <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-caption">
                             <h4>Events</h4>
-                            <p class="text-muted">Add a Classy Touch</p>
+                            <!--<p class="text-muted">Add a Classy Touch</p>-->
                         </div>
                     </a>
                 </div>
