--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ mixpanel.init("b05bc1152350834ce26780daaa463821");</script><!-- end Mixpanel -->
                     </a>
                     <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-caption">
-                            <h4>Weddings</h4>
+                            <h4>Performing</h4>
                             <!--<p class="text-muted">Make it Unforgettable</p>-->
                         </div>
                     </a>
@@ -192,20 +192,21 @@ mixpanel.init("b05bc1152350834ce26780daaa463821");</script><!-- end Mixpanel -->
 		    </a>
 		</div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
-                    <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
+                    <!--<a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">-->
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
-                                <i class="fa fa-ellipsis-h fa-3x"></i>
+				<p>Coming Soon</p>
+                                <!--<i class="fa fa-ellipsis-h fa-3x"></i>-->
                             </div>
                         </div>
                         <img src="img/portfolio/events.jpg" class="img-responsive" alt="">
-                    </a>
-                    <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
+                    <!--</a>-->
+                    <!--<a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">-->
                         <div class="portfolio-caption">
-                            <h4>Events</h4>
+                            <h4>Blog</h4>
                             <!--<p class="text-muted">Add a Classy Touch</p>-->
                         </div>
-                    </a>
+                    <!--</a>-->
                 </div>
             </div>
         </div>
