--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@ mixpanel.init("b05bc1152350834ce26780daaa463821");</script><!-- end Mixpanel -->
                     <!--<a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">-->
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
-				<p>Coming Soon</p>
+				<i>Coming Soon</i>
                                 <!--<i class="fa fa-ellipsis-h fa-3x"></i>-->
                             </div>
                         </div>
