--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@ mixpanel.init("b05bc1152350834ce26780daaa463821");</script><!-- end Mixpanel -->
                                 <i class="fa fa-ellipsis-h fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/weddings.jpg" class="img-responsive" alt="">
+                        <img src="img/portfolio/events.jpg" class="img-responsive" alt="">
                     </a>
                     <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-caption">
@@ -195,7 +195,6 @@ mixpanel.init("b05bc1152350834ce26780daaa463821");</script><!-- end Mixpanel -->
                     <!--<a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">-->
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
-				<i>Coming Soon</i>
                                 <!--<i class="fa fa-ellipsis-h fa-3x"></i>-->
                             </div>
                         </div>
@@ -204,7 +203,7 @@ mixpanel.init("b05bc1152350834ce26780daaa463821");</script><!-- end Mixpanel -->
                     <!--<a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">-->
                         <div class="portfolio-caption">
                             <h4>Blog</h4>
-                            <!--<p class="text-muted">Add a Classy Touch</p>-->
+                            <p class="text-muted">(coming soon)</p>
                         </div>
                     <!--</a>-->
                 </div>
